--- a/admin/html/index.html
+++ b/admin/html/index.html
@@ -1,1 +1,18 @@
-Plug-In installed successfully.
+<head>
+  <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
+    crossorigin="anonymous"></script>
+  <script src="scripts/package1.js"></script>
+  <link rel="stylesheet" href="css/style.css">
+</head>
+<br />
+<h1>Testing Api Sdk</h1>
+<br />
+<form id="api-form">
+
+  <br />
+  <label for="api-input">Input apis to be tested</label>
+  <input type="text" id="api-input" name="api"></input>
+  <br />
+
+  <button type="submit">Submit</button>
+</form>
