Changed to Automated testing

--- a/admin/html/index.html
+++ b/admin/html/index.html
@@ -10,11 +10,13 @@
 <form id="api-form">
 
   <br />
-  <label for="api-input">Input apis to be tested</label>
-  <input type="text" id="api-input" name="api"></input>
   <br />
-
-  <button type="submit">Submit</button>
+  <label for="package-id-input">Package ID</label>
+  <input type="text" id="package-input-id" name="packageId"></input>
+  <br />
+  <label for="merchant-id-input">Merchant ID</label>
+  <input type="text" id="merchant-input-id" name="merchantId"></input>
+  <button type="submit">Start Tests</button>
 </form>
 
 <pre id="json-response-display">
